Minor layout adjustments, sharing buttons weren't showing up properly in webkit browsers Fixed a layout problem with the table of contents

--- a/assets/dev/css/layout/_content.scss
+++ b/assets/dev/css/layout/_content.scss
@@ -83,7 +83,7 @@
   .page-content,
   .entry-content,
   .entry-summary {
-    margin: 1em 0 0;
+    margin: .4em 0 0;
     font-family: $font__header;
 
     h2 {
@@ -174,7 +174,7 @@
         border-radius: 3px;
       }
       img{
-        margin: 0;
+        margin: 1em 1em .5em 0;
         padding: 0;
         border-radius: 3px;
       }
