--- a/assets/dev/css/site/primary/_posts-and-pages.scss
+++ b/assets/dev/css/site/primary/_posts-and-pages.scss
@@ -175,14 +175,13 @@
 
 
 #post-share {
-
-
   .share-button:before {
+    position: absolute;
     width: 1em;
     margin-right: .3em;
     font-size: 200%;
     top: 30%;
-    left: 18%;
+    left: 17%;
   }
 
 
@@ -215,7 +214,7 @@
         display: block;
         width: 100%;
         height: 100%;
-        top: -31px;
+        //top: -31px;
         text-decoration: none;
       }
       a:hover{
@@ -261,6 +260,9 @@
   }
 
   .share-button:before {
+    position: absolute;
+    top: 30%;
+//    left: 15%;
     font-family: share-icons;
     display: inline-block;
     text-decoration: inherit;
@@ -283,9 +285,6 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-size: 170%;
-    position: relative;
-    top: 30%;
-    left: 15%;
   }
 
 }
